@@ -94,12 +94,10 @@ define([
                                     if (object.hasChildren) {
                                         template_var.contextMenuClass = 'parentTaskEditRow';
                                     } else {
-                                        console.debug('code is here 1');
                                         template_var.responsible = {
                                             id: object.responsible.id,
                                             name: object.responsible.name
                                         };
-                                        console.debug('code is here 2');
                                     }
                                 }
 
