@@ -10,6 +10,8 @@ Stalker Pyramid Changes
 * **New:** Leaf tasks on gantt chart now have a new functionality called
   "Request Review" which can be invoked through the context menu. It will
   create a new Ticket and assign it to the task responsible.
+* **New:** Calling 'Request Review' now will send an email to the responsible
+  and the logged in user.
 
 0.1.0.b2
 ========
